MB-61250: Clean-up temp-initial item from compaction BG fetch

An expiry generated by compaction will in the case of full-eviction
and no item in cache generate a read (bg-fetch). The expiry needs to
check no "live" version of the expiring key has been flushed.

Prior to this fix, when the bg-fetch completed via
completeCompactionExpiryBgFetch there are many cases early returning.
One of those cases (the item has been deleted/expired again) is
required to remove the temp-item else it will remain indefinitely.

This fix ensures the temp-initial item is removed on those early return
paths.

Change-Id: I7717c2d4a00dcaa4cee25ccaf2686481a5d89166
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/207552
Tested-by: Jim Walker <jim@couchbase.com>
Well-Formed: Restriction Checker
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>